--- a/classComponent.html
+++ b/classComponent.html
@@ -12,7 +12,7 @@
     <div id="root"></div>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         console.log(React);
         console.log(ReactDOM);
 
@@ -28,7 +28,7 @@
             <ClassComponent />,
             document.querySelector("#root");
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
