--- a/index.html
+++ b/index.html
@@ -6,105 +6,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            border: 0;
-        }
-
-        #root p {
-            color: white;
-            font-size: 20px;
-            background-color: green;
-            text-align: center;
-            width: 200px;
-        }
-
-        #btn_plus {
-            background-color: red;
-            border: 2px solid #000000;
-            font-size: 15px;
-            width: 200px;
-        }
-    </style>
 </head>
 
 <body>
     <div id="root"></div>
-    <button id="btn_plus">+</button>
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script type="text/javascript">
         console.log(React);
         console.log(ReactDOM);
 
-        // const root = document.querySelector('#root');
-        // const btn_plus = document.querySelector('#btn_plus');
+        // React.createElement(
+        //     type, //태그 이름 문자열 | 리엑트 컴포넌트 | React.Fragment
+        //     [props], // 리엑트 컴포넌트에 넣어주는 데이터 객체
+        //     [...children] //자식으로 넣어주는 요소들
+        // );
 
-        // let i =0;
+        //1.태그 이름 문자열 type
+        // <h1>type 이 "태그 이름 문자열" 입니다.</h1>
+        // ReactDOM.render(
+        //     React.createElement("h1", null, `type 이 "태그 이름 문자열" 입니다.`),
+        //     document.querySelector('#root')
+        // );
 
-        // root.innerHTML = "<p>init : 0</p>";
+        //2.리엑트 컴포넌트 type
 
-        // btn_plus.addEventListener("click",() =>{
-        //     root.innerHTML = `<p>init : ${++i}</p>`;
-        // })
-
-
-
-        //방법2
-        //컴포넌트 안에는 항상 데이터 같은것들이 들어가 있음 
-        //ex) init , count=0 (값이 바뀔때 render를해주어야함)
-        //초기화때 render, 값을 받을때 render
-        // const component = {
-        //     message: 'init',
-        //     count: 0,
-        //     render(){
-        //         return `<p>${this.message} : ${this.count}</p>`
-        //     }
-        // };
-
-        // function render(rootElement, component){
-        //     rootElement.innerHTML = component.render();
+        // const Component = () =>{
+        //     return React.createElement('p', null, `type이 "React 컴포넌트" 입니다`);
         // }
 
-        // //초기화
-        // render(document.querySelector('#root'), component);
+        // // <Component></Component> ====> <Component /> ===> <p>type이 "React 컴포넌트" 입니다</p>
+        // ReactDOM.render(
+        //     React.createElement(Component, null, null),
+        //     document.querySelector('#root')
+        // );
 
-        // document.querySelector("#btn_plus").addEventListener('click',() =>{
+        // 3. React.Fragment 
+        // ReactDOM.render(
+        //     React.createElement(
+        //         React.Fragment,
+        //         null,
+        //         `type이 "React 컴포넌트" 입니다`,
+        //         `type이 "React 컴포넌트" 입니다`,
+        //         `type이 "React 컴포넌트" 입니다`
+        //     ),
+        //     document.querySelector('#root')
+        // )
 
-        //     component.message = 'update';
-        //     component.count = component.count + 1;
+        // 4.복잡한 리액트 앨리먼트 모임
+        // <h1>안녕하세요</h1>
 
-        //     render(document.querySelector("#root"),component);
-        // });
+        // ex) <div><div><h1>주제</h1><ul><li>React</li></ul></div></div>
 
-
-
-        //React 이용
-
-        // <p hello="world">
-        const Component = (props) => {
-            return React.createElement(
-                'p',
+        ReactDOM.render(
+            React.createElement(
+                'div',
                 null,
-                `${props.message} : ${props.count}`
-            );
-        };
-
-        ReactDOM.render
-            (React.createElement(Component, { message: "init", count: 0 }, null),
-                document.querySelector("#root")
-            );
-
-        document.querySelector('#btn_plus').addEventListener('click', () => {
-            ReactDOM.render
-                (React.createElement(Component, { message: "init", count: 10 }, null),
-                    document.querySelector("#root")
-                );
-        });
-
+                React.createElement(
+                    'div',
+                    null,
+                    React.createElement('h1', null, '주제'),
+                    React.createElement(
+                        'ul',
+                        null,
+                        React.createElement('li', null, "React"),
+                        React.createElement('li', null, "Vue"),
+                    )
+                )
+            ),
+            document.querySelector('#root')
+        )
     </script>
 </body>
 
