--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    <script type="text/javascript">
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel">
         console.log(React);
         console.log(ReactDOM);
 
@@ -59,24 +60,116 @@
 
         // ex) <div><div><h1>주제</h1><ul><li>React</li></ul></div></div>
 
+        // ReactDOM.render(
+        //     React.createElement(
+        //         'div',
+        //         null,
+        //         React.createElement(
+        //             'div',
+        //             null,
+        //             React.createElement('h1', null, '주제'),
+        //             React.createElement(
+        //                 'ul',
+        //                 null,
+        //                 React.createElement('li', null, "React"),
+        //                 React.createElement('li', null, "Vue"),
+        //             )
+        //         )
+        //     ),
+        //     document.querySelector('#root')
+        // )
+
+
+
+        /* 2022-12-21*/
+        // 우리가 작성한 어떤 코드 => 순수하게 실행할 수 있는 자바스크립트
+        // babel
+
+        // JSX JSX문법으로 작성된 코드는 순수한 JAVASCRIPT로 컴파일하여 사용한다 (BABEL)
+        // babeljs.io를통해 cdn script를받고 text/javascript를 text/babel로 변경
+
+        // const title = "주제!"
+        // {a: "a"}
+        // ReactDOM.render(
+        //     <div a="a">
+        //         <div>
+        //             <h1>{title}</h1>
+        //             <ul>
+        //                 <li>React</li>
+        //             </ul>
+        //         </div>
+        //     </div>,
+        //     document.querySelector('#root')
+        // );
+        /* 2022-12-21*/
+
+
+        // {message: '안녕하세요'}
+        // function Component(props) {
+        //     return(
+        //     <div>
+        //         <h1>
+        //             {props.message} 이것은  함수로 만든 컴포넌트입니다.
+        //         </h1>
+        //     </div>
+        //     );
+        // }
+        // Component.defaultProps = {
+        //     message: '기본값',
+
+        // }
+
+        class Component extends React.Component {
+
+            // state = { //state를 초기값생성하는과정
+            //     count: 0,
+            // }
+
+            constructor(props){
+                super(props);
+
+                //
+                this.state = {count:0};
+            }
+
+            render() {
+                return (
+                    <div>
+                        <h1>
+                            {this.props.message} 이것은  함수로 만든 컴포넌트입니다.
+                        </h1>
+                    <p>{this.state.count}</p>
+                    </div>
+                );
+            }
+
+            componentDidMount(){
+                setTimeout(() =>{
+                    // this.state.count = this.state.count + 1;
+
+                    // this.setState({
+                    //     count: this.state.count + 1,
+                    // })
+
+                    this.setState((previousState) => {
+                        const newState = { count: previousState.count + 1 }
+                        return newState;
+                    });
+                },1000);
+            }
+
+
+            static defaultProps = {
+                message: "기본값이요",
+            }
+        }
+
+    
+
         ReactDOM.render(
-            React.createElement(
-                'div',
-                null,
-                React.createElement(
-                    'div',
-                    null,
-                    React.createElement('h1', null, '주제'),
-                    React.createElement(
-                        'ul',
-                        null,
-                        React.createElement('li', null, "React"),
-                        React.createElement('li', null, "Vue"),
-                    )
-                )
-            ),
-            document.querySelector('#root')
-        )
+            <Component  message="기본값1234" />,
+            document.querySelector("#root")
+        );
     </script>
 </body>
 
